k8s/base/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: nexusvision
  labels:
    app.kubernetes.io/name: nexusvision
    app.kubernetes.io/part-of: nexusvision
