k8s/base/web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nexus-web
  namespace: nexusvision
  labels:
    app: nexus-web
spec:
  selector:
    app: nexus-web
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
